--- a/server/static/css/chart.css
+++ b/server/static/css/chart.css
@@ -5,12 +5,16 @@
     shape-rendering: crispEdges;
 }
 
-.x.axis path {
-    display: none;
-}
-
 .line {
     fill: none;
-    stroke: steelblue;
     stroke-width: 1.5px;
 }
+
+/*
+.trainSet {
+    stroke: steelblue;
+}
+
+.testSet {
+    stroke: steelblue;
+}*/
